crates/service/tests/diagnostics/snapshots/features__diagnostics__mutated_immutable__immutable.snap
---
source: crates/service/tests/diagnostics/mutated_immutable.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 16
        },
        "end": {
          "line": 5,
          "character": 17
        }
      },
      "severity": 1,
      "code": "mutated-immutable",
      "source": "wat",
      "message": "mutating an immutable global is not allowed",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 10
              },
              "end": {
                "line": 2,
                "character": 13
              }
            }
          },
          "message": "immutable global type"
        }
      ]
    }
  ]
}
