crates/service/tests/diagnostics/snapshots/features__diagnostics__mutated_immutable__undef_global.snap
---
source: crates/service/tests/diagnostics/mutated_immutable.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 4
        },
        "end": {
          "line": 3,
          "character": 18
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [any], found []"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 16
        },
        "end": {
          "line": 3,
          "character": 17
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find global `0` in this scope"
    }
  ]
}
