crates/service/tests/diagnostics/snapshots/features__diagnostics__mutated_immutable__undef_struct_field.snap
---
source: crates/service/tests/diagnostics/mutated_immutable.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 18
        },
        "end": {
          "line": 5,
          "character": 19
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [any] at the end"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 17
        },
        "end": {
          "line": 5,
          "character": 18
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find field `0` in this scope"
    },
    {
      "range": {
        "start": {
          "line": 10,
          "character": 27
        },
        "end": {
          "line": 10,
          "character": 40
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find field `$packed_field` in this scope"
    },
    {
      "range": {
        "start": {
          "line": 12,
          "character": 27
        },
        "end": {
          "line": 12,
          "character": 40
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find field `$packed_field` in this scope"
    }
  ]
}
